k8s_prod_gcp/mafia_defs.yaml
apiVersion: v1
kind: Service
metadata:
  name: mafia-backend-service
  namespace: mafia-prod
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: mafia
    name: mafia-backend
---
apiVersion: v1
kind: Service
metadata:
  name: mafia-ui-service
  namespace: mafia-prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mafia
    name: mafia-ui
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: mafia-prod
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: mafia
    name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mafia
    name: mafia-backend
  name: mafia-backend
  namespace: mafia-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mafia
  template:
    metadata:
      labels:
        app: mafia
        name: mafia-backend
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: redis-service
        image: taleodor/mafia-express@sha256:67b6e078d269ccebd13380fe640116edfa380667dbd9bcf5d2e0108e0ad18473
        name: mafia-backend-container
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mafia
    name: mafia-ui
  name: mafia-ui
  namespace: mafia-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mafia
  template:
    metadata:
      labels:
        app: mafia
        name: mafia-ui
    spec:
      containers:
      - env:
        - name: HUB_HOST
          value: mafia-backend-service
        - name: HUB_PORT
          value: "3000"
        image: taleodor/mafia-vue@sha256:0c81d43980c4c388bc9f2d619a11b3dd9650baa71949b4f023aa5cf41dba0f46
        name: mafia-ui-container
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stateful-set
  namespace: mafia-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mafia
  serviceName: redis
  template:
    metadata:
      labels:
        app: mafia
        name: redis
    spec:
      containers:
      - command:
        - redis-server
        - --bind
        - 0.0.0.0
        image: docker.io/library/redis@sha256:7e2c6181ad5c425443b56c7c73a9cd6df24a122345847d1ea9bb86a5afc76325
        name: redis-container
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
      securityContext:
        fsGroup: 999
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute
  namespace: mafia-prod
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`mafia.brolia.com`)
    middlewares:
    - name: redirect
    services:
    - name: mafia-ui-service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: websecure-ingressroute
  namespace: mafia-prod
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`mafia.brolia.com`)
    services:
    - name: mafia-ui-service
      port: 80
  tls:
    certResolver: le
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: mafia-prod
spec:
  redirectScheme:
    scheme: https
